--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Camilo Paez <cepn26@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "homepage": "https://estebanpaez.github.io/css-draw",
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  }
 }
